# claimbase

./: ATLAS.md  README.md  SCHEMA.md  WORKER.md  build_signals.py  compile_decision.py  decision_taxonomy.py  feeds.yaml  pyproject.toml
.github/workflows/: mole.yml
data/: artifact.json  atlas.json  claims.jsonl  decision.json  district_names.json  edges.jsonl  signals.jsonl  sources.jsonl
decision/: __init__.py  engine.py  models.py  prioritization.py  report.py  templates.py
extractor/: __init__.py  engine.py
mole/: __init__.py  __main__.py  atlas.py  compile.py  feeds.py  pipeline.py  store.py
queue/: pending.jsonl
runs/: 27329964431.json  27399960468.json  27459165685.json  27491256155.json  27531335733.json  backfill-20260611.json  backfill-20260612.json  manual-20260611.json
tests/: test_atlas.py  test_extractor.py  test_feeds.py  test_pipeline.py
