[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "claimbase"
version = "0.1.0"
description = "A living, versioned claim graph: the mole and its extraction engine."
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["PyYAML>=6.0", "pydantic>=2.7"]

[project.optional-dependencies]
embeddings = ["model2vec>=0.5"]
dev = ["pytest>=8.0", "ruff>=0.5"]
all = ["claimbase[embeddings,dev]"]

[tool.hatch.build.targets.wheel]
packages = ["mole", "extractor", "decision"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
